chore: start using Rocky Linux for CI (#782)
Switch to Rocky Linux as our Enterprise Linux in use.

Since Openwall is working with the software, we should add it to our
test procedures.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/build_CI.yml
+++ b/.github/workflows/build_CI.yml
@@ -51,7 +51,7 @@ jobs:
             dockerfile: Dockerfile.UbuntuDevel
           - image-tag: ubuntu.rolling
             dockerfile: Dockerfile.UbuntuRolling
-          - image-tag: redhat.ubi8
+          - image-tag: enterprise
             dockerfile: Dockerfile.RHUbi8
 
     permissions:
